<resources>
    <string name="app_name">Untitled</string>
    <string name="f_view_pager">First ViewPager  Swipe right to see next</string>
    <string name="previous_bt">tap to run previous track</string>
    <string name="play_bt">tap to play track</string>
    <string name="next_bt">tap to play next</string>
    <string name="pause_track">tap to pause track</string>
    <string name="tap_to_open_menu">tap to open menu</string>
</resources>
