<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp">

    <TextView
        android:id="@+id/track_title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="32sp"
        android:text="@string/app_name"
        android:layout_marginTop="16dp"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_centerVertical="true"
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="64dp">

        <ImageButton
            android:layout_weight="1"
            android:id="@+id/previous"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/previous_bt"
            android:src="@drawable/ic_skip_previous_black_24dp"
            android:layout_gravity="center"
            />

        <ImageButton
            android:id="@+id/play"
            android:layout_weight="1"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_play_arrow_black_24dp"
            android:contentDescription="@string/play_bt"
            android:onClick="onPlayPressed"
            />

        <ImageButton
            android:id="@+id/pause"
            android:layout_weight="1"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_pause_black_24dp"
            android:contentDescription="@string/pause_track"
            android:visibility="gone"
            android:onClick="onPausePressed"/>

        <ImageButton
            android:id="@+id/next"
            android:layout_weight="1"
            android:layout_height="72dp"
            android:contentDescription="@string/next_bt"
            android:src="@drawable/ic_skip_next_black_24dp"
            android:layout_gravity="center"
            android:layout_width="72dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/track_progress"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_bar"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        tools:progressBackgroundTint="@color/colorAccent"/>

    <TextView
        android:id="@+id/track_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textStyle="italic"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="24/78"/>

</RelativeLayout>